syntax = "proto3";

option go_package = "github/elangreza14/tablelink/gen/auth;gen";

message LoginRequest {
 string email = 1;
 string password = 2;
};

message Data {
 string access_token = 1;
};

message LoginResponse {
 bool status = 1;
 string message = 2;
 Data data = 3;
};


message CreateUserRequest {
 int32 role_id = 2;
 string name = 3;
 string email = 4;
 string password = 5;
};

message CreateUserResponse {
 bool status = 1;
 string message = 2;
};

message UpdateUserRequest {
 string name = 2;
};

message UpdateUserResponse {
 bool status = 1;
 string message = 2;
};


message GetUserRequest {
};

message GetUserResponse {
 bool status = 1;
 string message = 2;
};

service Auth {
    rpc LoginUser (LoginRequest) returns (LoginResponse) {}
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {}
    rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
}

